--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,8 +67,7 @@ dependencies {
     def lifecycle_version = "2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    // GlideToVectorYou (for svg support)
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
 }
